| Bug #16386 | DD: Cluster fails to create more then 5 logfile groups in extended dll testing | ||
|---|---|---|---|
| Submitted: | 11 Jan 2006 21:40 | Modified: | 14 Mar 2006 11:34 |
| Reporter: | Jonathan Miller | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1.6-alpha | OS: | Linux (Linux) |
| Assigned to: | Jonas Oreland | Target Version: | |
[3 Mar 2006 19:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3440
[12 Mar 2006 13:48]
Jonas Oreland
Pushed into 5.1.8 Note however, that I also added a limitation for 1 logfile group, due to bugs in system restart.
[14 Mar 2006 9:09]
Jon Stephens
This means that it is now possible to have only one logfile group per cluster at any one time? If so, how does this affect the default logfile group if I've heard some things about (but haven't yet documented)?
[14 Mar 2006 9:18]
Jonas Oreland
It meant that before this bug was fixed, there was a resource shortage preventing more than 5 to be created, this has been fixed. Now I added an explicit check for max 1.
[14 Mar 2006 11:34]
Jon Stephens
Thank you for your bug report. This issue has been addressed in the documentation. The updated documentation will appear on our website shortly, and will be included in the next release of the relevant product(s). Additional info: Documented feature in 5.1.8 changelog and associated sections of the 5.1 Manual. Closed.

Description: Using the following test case from ndb_dd_ddl_extended.test the cluster can not more then 5 logfile groups. I have spent sometime trying to troubleshoot this, but no error or trace files are created for troubleshooting. --disable_warnings DROP DATABASE IF EXISTS mysqltest; CREATE DATABASE mysqltest; --enable_warnings let $cnt= 6; while ($cnt) { eval CREATE LOGFILE GROUP lg$cnt ADD UNDOFILE './lg$cnt/undofile.dat' INITIAL_SIZE 1M UNDO_BUFFER_SIZE = 1M ENGINE=NDB; eval CREATE TABLESPACE ts$cnt ADD DATAFILE './lg$cnt/datafile.dat' USE LOGFILE GROUP lg$cnt INITIAL_SIZE 1M ENGINE NDB; eval CREATE TABLE mysqltest.t$cnt (c1 INT, c2 DOUBLE, c3 FLOAT, c4 TIMESTAMP, c5 TEXT, c6 LONGBLOB, c7 CHAR, c8 MEDIUMINT AUTO_INCREMENT, c9 BIT(8), c10 DECIMAL(10,2), c11 char(10), c12 VARCHAR(150), PRIMARY KEY (c8)) TABLESPACE ts$cnt STORAGE DISK ENGINE=NDB; eval INSERT INTO mysqltest.t$cnt VALUES(1,1,2.00,'20050101000000',"Testing",repeat('a',1*1024),"T",NULL,b'111111',100.00,"MoreTesting","Disk DataDisk DataDisk DataDisk DataDisk Data"); eval INSERT INTO mysqltest.t$cnt VALUES(2,2,3.00,'20060101000000',"Testing",repeat('b',1*1024),"S",NULL,b'101111',300.00,"MoreTesting","Disk DataDisk DataDisk DataDisk DataDisk Data"); eval INSERT INTO mysqltest.t$cnt VALUES(3,3,1.00,'20070101000000',"Testing",repeat('c',1*1024),"W",NULL,b'111111',1110.10,"MorTeing","Disk DataDisk DataDisk DataDisk DataDisk Data"); dec $cnt; } let $cnt= 6; while ($cnt) { eval SELECT hex(c9) FROM mysqltest.t$cnt WHERE c1 = 2; eval SELECT c10 FROM mysqltest.t$cnt WHERE c8 = 3; eval DROP TABLE mysqltest.t$cnt; eval ALTER TABLESPACE ts$cnt DROP DATAFILE './lg$cnt/datafile.dat' ENGINE = NDB; eval DROP TABLESPACE ts$cnt ENGINE=NDB; eval DROP LOGFILE GROUP lg$cnt ENGINE=NDB; dec $cnt; } How to repeat: see above