ndb dd - bug#16386   Use shared pool for logfile group/undofiles in lgman